# ScreenTransfer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/io/github/duzhaokun123/screentransfer/xposed/: IByteArraySender.aidl  IScrTsfManager.aidl  IStreamCallback.aidl  IVideoStreamCallback.aidl
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  Decoder.cpp  Decoder.h  ffmpegdecoder.cpp  getlinker.cpp
app/src/main/java/io/github/duzhaokun123/androidapptemplate/bases/: BaseActivity.kt
app/src/main/java/io/github/duzhaokun123/androidapptemplate/utils/: TipUtil.kt  Utils.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/: Application.kt  MainActivity.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/display/: RemoteDisplay.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/ffmpeg/: FFmpegDecoder.kt  FFmpegExe.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/netservice/: NetService.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/service/: NetService.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/service/display/: RemoteDisplay.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/service/xposed/: BridgeService.kt  ScrTsfManager.kt  ScrTsfManagerHelper.kt  XposedInit.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/service/xposed/utils/: Instances.kt  TipUtil.kt  Utils.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/utils/: AppendableByteInputStream.kt  FFmpegDecoder.kt  ParcelableUtil.java  Utils.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/xposed/: BridgeService.kt  ScrTsfManager.kt  ScrTsfManagerHelper.kt  XposedInit.kt
app/src/main/java/io/github/duzhaokun123/screentransfer/xposed/utils/: Instances.kt  TipUtil.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
